<resources>
    <string name="app_name">Story App</string>
    <string name="splash_icon_description">Splash Icon</string>
    <string name="welcome_story_teller">Welcome, Story Teller!</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="register_story_teller">Create New Account</string>
    <string name="hint_name">Name</string>
    <string name="story_item_thumbnail">Story Item Thumbnail</string>
    <string name="thumbnail_preview">Thumbnail Preview</string>
    <string name="btn_camera">Camera</string>
    <string name="btn_gallery">Gallery</string>
    <string name="hint_description">Description</string>
    <string name="btn_upload">Upload</string>
    <string name="story_image">Story Image</string>
    <string name="preference_auth_token">auth_token</string>
    <string name="register_here">Don\'t have account? Register here</string>
    <string name="login_here">Already have account? Login here</string>
    <string name="add_new_story_floating_button">Add New Story Floating Button</string>
    <string name="tooltip_add_new_story">Add New Story</string>
    <string name="logout">Logout</string>
    <string name="retry">Retry</string>
    <string name="empty_string_error">Password must not be empty</string>
    <string name="less_character_password_error">Password must be 8 characters long</string>
    <string name="empty_email_error">Email must not be empty</string>
    <string name="not_valid_email_error">Email is not valid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="intent_key_story_id">story_id</string>
    <string name="btn_view_detail">View Detail</string>
    <string name="btn_pick_location">Pick Location</string>
    <string name="intent_key_location">location_lat_lon</string>
    <string name="intent_key_address">location_address_name</string>
    <string name="label_location">Location</string>
    <string name="hint_location">Pick Location From Map</string>
    <string name="map_view">View Map</string>
    <string name="use_location">Use Location</string>
    <string name="extra_is_pick_location">is_pick_location</string>
    <string name="is_new_story_uploaded">is_new_story_uploaded</string>
</resources>