<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.features.new_story.NewStoryActivity">

        <ImageView
            android:id="@+id/iv_thumbnail_preview"
            android:transitionName="image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginHorizontal="85dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/thumbnail_preview"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera_open"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/btn_camera"
            app:strokeColor="@color/teal_700"
            android:textSize="16sp"
            android:textColor="@color/teal_700"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintStart_toStartOf="@+id/iv_thumbnail_preview"
            app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail_preview" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery_open"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/teal_700"
            android:textSize="16sp"
            android:textColor="@color/teal_700"
            android:text="@string/btn_gallery"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_thumbnail_preview"
            app:layout_constraintTop_toBottomOf="@+id/iv_thumbnail_preview" />

        <CheckBox
            android:id="@+id/cb_include_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_gallery_open" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_location"
            app:layout_constraintStart_toEndOf="@id/cb_include_location"
            app:layout_constraintTop_toTopOf="@id/cb_include_location"
            app:layout_constraintBottom_toBottomOf="@id/cb_include_location"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="32dp"
            android:paddingHorizontal="16dp"
            android:focusable="false"
            android:hint="@string/hint_location"
            android:visibility="gone"
            android:drawablePadding="10dp"
            android:background="@drawable/rounded_edit_text_state"
            android:inputType="text"
            android:maxLines="1"
            android:drawableStart="@drawable/baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_include_location" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="32dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_location">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:background="@drawable/rounded_edit_text_state"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:maxLines="15"
                android:minLines="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/btn_upload"
            android:textAllCaps="false"
            app:cornerRadius="15dp"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
