<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.features.login.LoginActivity">

    <ImageView
        android:id="@+id/iv_header_icon"
        android:alpha="0"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/splash_icon_description"
        android:src="@drawable/baseline_history_edu_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/teal_700" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="16dp"
        android:text="@string/welcome_story_teller"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_header_icon" />

    <TextView
        android:id="@+id/tv_span_signup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:paddingHorizontal="16dp"
        android:text="@string/register_here"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <com.example.storyapp.ui.customView.StoryEmailEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:textColor="@color/teal_700"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_span_signup"/>

    <com.example.storyapp.ui.customView.StoryPasswordEditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/teal_700"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btn_login"
        app:cornerRadius="15dp"
        android:textAllCaps="true"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintVertical_bias="0.131" />

</androidx.constraintlayout.widget.ConstraintLayout>